--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one- jekyll-remote-theme
 title: "yuroyumachi"
+description: ",./,./"
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
